# flutter_zip_archive

./: .metadata  README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/imt/flutter_zip_archive/: FlutterZipArchivePlugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/imt/flutter_zip_archive_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_zip_archive.podspec
ios/Classes/: FlutterZipArchivePlugin.m
lib/: flutter_zip_archive.dart  flutter_zip_archive_method_channel.dart  flutter_zip_archive_platform_interface.dart
test/: flutter_zip_archive_method_channel_test.dart  flutter_zip_archive_test.dart
windows/: CMakeLists.txt  flutter_zip_archive_plugin.cpp  flutter_zip_archive_plugin.h  flutter_zip_archive_plugin_c_api.cpp
windows/minizip/: mz_crypt.c  mz_crypt_win32.c  mz_os.c  mz_os_win32.c  mz_strm_os_win32.c  mz_strm_split.c  mz_strm_zlib.c  mz_zip.c  mz_zip_rw.c
windows/zlib/: adler32.c  compress.c  crc32.c  deflate.c  gzlib.c  gzread.c  gzwrite.c  infback.c  inflate.c  trees.c  zutil.c
